# geni

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Subproject.cmake  Subproject_config.cmake.tmp  Subproject_cpputest.cmake
depend/: config.sh
source/math/: angle.hpp  constant.hpp  envoy.cpp  envoy.hpp  fuzzy.hpp  mat4.hpp  mat4x4.cpp  mat4x4.hpp  math.hpp  matrix.hpp  qtn.hpp  scalar.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector.hpp
src/cmake/: ExternalDependency.cmake
src/memory/: Memory.hpp
test/: main.cpp
test/math/: stringify.hpp  test-mat4.cpp  test-mat4x4.cpp  test-math.cpp  test-qtn.cpp  test-vec2.cpp  test-vec3.cpp  test-vec4.cpp  test.cpp
test/memory/: main.cpp
test/utility/: main.cpp
